[tool.poetry]
name = "namada-load-testing"
version = "0.1.0"
description = ""
authors = ["Gianmarco Fraccaroli <<>>"]

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.17.21"
peewee = "^3.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
